// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/"
      text="トリビアマップ"
    />
    <ForwardRef(Typography)
      align="center"
    >
      ようこそ 
      Axel
      さん
    </ForwardRef(Typography)>
    <ForwardRef(Stack)
      direction="row"
    >
      <ForwardRef(Avatar)
        src="https://..."
        sx={
          Object {
            "height": 80,
            "mx": "auto",
            "width": 80,
          }
        }
      />
    </ForwardRef(Stack)>
    <LinkList
      list={
        Array [
          Object {
            "icon": <Memo />,
            "link": "/admin/articles",
            "text": "マイ投稿一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/likes",
            "text": "いいね一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/account",
            "text": "アカウント管理",
          },
        ]
      }
    />
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests no icon 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/"
      text="トリビアマップ"
    />
    <ForwardRef(Typography)
      align="center"
    >
      ようこそ 
      Axel
      さん
    </ForwardRef(Typography)>
    <ForwardRef(Stack)
      direction="row"
    >
      <ForwardRef(Avatar)
        src="no-icon.jpg"
        sx={
          Object {
            "height": 80,
            "mx": "auto",
            "width": 80,
          }
        }
      />
    </ForwardRef(Stack)>
    <LinkList
      list={
        Array [
          Object {
            "icon": <Memo />,
            "link": "/admin/articles",
            "text": "マイ投稿一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/likes",
            "text": "いいね一覧",
          },
          Object {
            "icon": <Memo />,
            "link": "/admin/account",
            "text": "アカウント管理",
          },
        ]
      }
    />
  </ForwardRef(Stack)>
</AdminWrapper>
`;
